--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
       crossorigin="anonymous">
 
-    <title>Tasknest>🐦</title>
+    <title>Nuvnote📓</title>
   </head>
   <body>
     <div id="root"></div>
